# kanumi

./: Cargo.toml  README.md  script.sh
src/: cli.rs  config.rs  image_meta.rs  main.rs  model.rs  utils.rs
src/cli/: args.rs  config.rs  list.rs  metadata.rs  mod.rs  scan.rs
src/models/: configuration.rs  image_meta.rs  mod.rs  score_filter.rs
src/utils/: common.rs  list.rs  mod.rs  scan.rs
