[package]
name = "kanumi-rs"
version = "0.1.0"
authors = ["Coko <91132775+Coko7@users.noreply.github.com>"]
edition = "2021"
description = "A cli to select/filter image collections"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
csv = "1.3.1"
directories = "6.0.0"
env_logger = "0.11.5"
image = "0.25.5"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
walkdir = "2.5.0"
xdg = "2.5.2"
